k3s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: monospaced
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      nodeSelector:
        role: master
      containers:
        - name: backend
          image: ghcr.io/rohitpotato/monospaced-stack/backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
