k3s/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  namespace: monospaced
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: api.rohitpotato.xyz
    http:
      paths:
      - backend:
          service:
            name: backend
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - api.rohitpotato.xyz
    secretName: backend-tls
